<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        tools:context=".view.formregister.FormRegister">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_login_title"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
        />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/gray"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textColorHint="@color/gray"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
        />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_text"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:backgroundTint="@color/green"
        />

        <TextView
            android:id="@+id/redirect_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redirect_to_register_text"
            android:textSize="25sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
        />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>