<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.formregister.FormRegister"
        android:orientation="vertical"
        android:background="@color/black">

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_logout_text"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:backgroundTint="@color/red"
            android:layout_gravity="end"
            />

        <EditText
            android:id="@+id/edit_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:background="@color/white"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:inputType="text"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edit_identification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_identification"
            android:background="@color/white"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:inputType="number"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity"
            android:background="@color/white"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:inputType="number"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/button_write_text_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_write_data_text"
            android:textSize="22sp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button_update_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update_data_text"
            android:textSize="22sp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/edit_powwow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_powwowItem"
            android:background="@color/white"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:inputType="text"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
        />

        <Button
            android:id="@+id/button_delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_data_text"
            android:textSize="22sp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
        />

        <Button
            android:id="@+id/button_read_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_read_data_text"
            android:textSize="22sp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/result_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
        />

        <TextView
            android:id="@+id/result_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/result_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>